# Online_Store_FastAPI

./: .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  database.py  dependency.py  main.py
app/models/: __init__.py  category.py  mixins.py  order.py  payment.py  product.py  user.py
app/payments/: __init__.py  gateway.py  mock_gateway.py
app/repositories/: category_repo.py  order_repo.py  payment_repo.py  product_repo.py  user_repo.py
app/routes/: auth.py  category.py  order.py  payment.py  product.py
app/schemas/: auth.py  category.py  order.py  payment.py  product.py
app/security/: dependences.py  jwt.py  password.py  token_help.md
app/services/: auth.py  order.py  payment.py
migrations/: env.py
migrations/versions/: 3f5525f0bfa0_модель_user.py  811d689b132a_добавлены_модели_order_и_orderitem.py  909b4ab2e1ed_созданы_категории_и_продукты.py  91c428cb3f75_update_product_unique_name.py  ab1393ad2b8a_изменено_поле_price_в_product.py  c2f1d7f3aa10_add_payments_table.py  d3e4f5a6b7c8_add_unique_active_payment_per_order.py
