[project]
name = "online-store-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "argon2-cffi>=23.1.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.11.0",
    "redis>=7.1.0",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.46",
]
